--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,10 @@ button{
     cursor: pointer;
 }
 
+#restartButton{
+    display: none;
+}
+
 .choice:hover{
     opacity: 1;
     box-shadow: 0px 0px 30px 10px #888888;
